# pure-sticky

./: default.nix  pure-sticky.cabal
src/Pure/: Sticky.hs
