name:                pure-sticky
version:             0.7.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >=4.9 && <4.11,
    pure >= 0.7 && < 1,
    pure-cond >= 0.7 && < 1,
    pure-prop >= 0.7 && < 1
  exposed-modules: 
    Pure.Sticky
  hs-source-dirs:      src
  default-language:    Haskell2010